--- a/manifest.json
+++ b/manifest.json
@@ -8,23 +8,23 @@
 	"description": "A small app to discover animals!",
 	"start_url": "/",
 	"dir": "ltr",
-	"scope": "/",
+	"scope": "/?standalone=1",
 	"lang": "fr",
 	"orientation": "landscape",
 	"categories": ["education", "games", "kids"],
 	"display_override": ["window-controls-overlay"],
 	"icons": [{
-		"src": "/favicon/web-app-manifest-192x192.png",
+		"src": "./favicon/web-app-manifest-192x192.png",
 		"sizes": "192x192",
 		"type": "image/png",
 		"purpose": "maskable"
 	}, {
-		"src": "/favicon/web-app-manifest-512x512.png",
+		"src": "./favicon/web-app-manifest-512x512.png",
 		"sizes": "512x512",
 		"type": "image/png",
 		"purpose": "maskable"
 	}, {
-		"src": "/favicon/web-app-manifest-512x512.png",
+		"src": "./favicon/web-app-manifest-512x512.png",
 		"sizes": "512x512",
 		"type": "image/png",
 		"purpose": "any"
