--- a/manifest.json
+++ b/manifest.json
@@ -6,9 +6,9 @@
 	"display": "fullscreen",
 	"id": "Animux",
 	"description": "A small app to discover animals!",
-	"start_url": "/",
+	"start_url": "/animux/",
 	"dir": "ltr",
-	"scope": "/?standalone=1",
+	"scope": "/animux/?standalone=1",
 	"lang": "fr",
 	"orientation": "landscape",
 	"categories": ["education", "games", "kids"],
